test/bad/add-with-class.sam
// ERROR_COUNT: 1
// add-with-class.sam:9:30-9:36: [UnexpectedType]: Expected: `() -> int`, actual: `() -> A`.

class A(val a: int) {
  function init(): A = { a: 42 }
}

class Main {
  function main(): int = 3 + A.init()
}
